force-app/main/default/objects/Case/fields/wkitsm__Urgency__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Urgency__c</fullName>
    <inlineHelpText>Urgency describes how quickly something needs to be resolved .
Low - Inconvenient; workaround identified.
Medium - Work functions impaired; workaround possible.
High - Can no longer perform primary work functions.
Critical - Catastrophic; can no longer work.</inlineHelpText>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
                <label>Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>