force-app/main/default/objects/Case/fields/wkitsm__WorkaroundDetails__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__WorkaroundDetails__c</fullName>
    <label>Workaround Details</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>