force-app/main/default/objects/Case/fields/wkitsm_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>wkitsm_TimeZone__c</fullName>
    <defaultValue>(&quot;Default&quot;)</defaultValue>
    <label>wkitsm__TimeZone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Central Daylight Time (CDT)</fullName>
            </value>
            <value>
                <fullName>Mountain Daylight Time (MDT)</fullName>
            </value>
            <value>
                <fullName>Pacific Daylight Time (PDT)</fullName>
            </value>
            <value>
                <fullName>Mountain Standard Time (MST)</fullName>
            </value>
            <value>
                <fullName>Alaska Daylight Time (AKDT)</fullName>
            </value>
            <value>
                <fullName>Hawaii-Aleutian Standard Time (HAST)</fullName>
            </value>
            <value>
                <fullName>Newfoundland Daylight Time (NDT)</fullName>
            </value>
            <value>
                <fullName>Atlantic Daylight Time (ADT)</fullName>
            </value>
            <value>
                <fullName>Central Standard Time (CST)</fullName>
            </value>
            <value>
                <fullName>Mountain Time (MT)</fullName>
            </value>
            <value>
                <fullName>India Standard Time (IST)</fullName>
            </value>
            <value>
                <fullName>British Summer Time (BST)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>