force-app/main/default/objects/Case/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>CASE( YEAR(  DATEVALUE(CreatedDate) ) , 2023, &quot;2023&quot;, &quot;2024&quot;)</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>