force-app/main/default/objects/Case/recordTypes/ISC_Task.recordType-meta.xml
<RecordType>
    <fullName>ISC_Task</fullName>
    <active>true</active>
    <businessProcess>ISC - Task</businessProcess>
    <label>Task</label>
</RecordType>