force-app/main/default/objects/Case/recordTypes/wkitsm__Change.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Change</fullName>
    <active>true</active>
    <businessProcess>wkitsm__ITSC - Change Process</businessProcess>
    <description>Create a request for a change on a recurring or trending problem or incident.</description>
    <label>Change</label>
</RecordType>