force-app/main/default/objects/Case/recordTypes/wkitsm__Incident.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Incident</fullName>
    <active>true</active>
    <businessProcess>wkitsm__ITSC - Incident Process</businessProcess>
    <description>Log a ticket for a loss or disruption of operations, services, or functions.</description>
    <label>Incident</label>
</RecordType>