force-app/main/default/objects/Case/recordTypes/wkitsm__MajorIncident.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__MajorIncident</fullName>
    <active>true</active>
    <businessProcess>wkitsm__ITSC - Major Incident Process</businessProcess>
    <description>Log a ticket for a major loss or disruption of operations, services, or functions.</description>
    <label>Major Incident</label>
</RecordType>