force-app/main/default/objects/Case/recordTypes/wkitsm__Problem.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Problem</fullName>
    <active>true</active>
    <businessProcess>wkitsm__ITSC - Problem Process</businessProcess>
    <description>Correlate tickets around incidents that are related to a failure in the IT infrastructure.</description>
    <label>Problem</label>
</RecordType>