force-app/main/default/objects/Case/recordTypes/wkitsm__Request.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Request</fullName>
    <active>true</active>
    <businessProcess>wkitsm__ITSC - Request Process</businessProcess>
    <description>Log a service request for support, delivery, information, advice, or documentation. Requests are not related to failures in the IT infrastructure.</description>
    <label>Request</label>
</RecordType>