force-app/main/default/objects/Case/recordTypes/Workplace_Services.recordType-meta.xml
<RecordType>
    <fullName>Workplace_Services</fullName>
    <active>true</active>
    <businessProcess>Workplace Process</businessProcess>
    <description>Request assistance with non-tech office equipment and kitchen supplies.</description>
    <label>Workplace Services</label>
</RecordType>