force-app/main/default/objects/Case/validationRules/Case_closure_before_task_completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_closure_before_task_completion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Innova_Open_Task_Count__c  &gt; 0 , ISPICKVAL(Status , &apos;Closed&apos;) , $RecordType.DeveloperName = &apos;Request&apos; , NOT( Toggle__c  = True))</errorConditionFormula>
    <errorMessage>Case cannot be closed before all related tasks are completed</errorMessage>
</ValidationRule>