force-app/main/default/objects/Case/validationRules/Case_Update_Closed_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Update_Closed_Rejected</fullName>
    <active>false</active>
    <description>Validation rule to block users by updating the Closed ticket after 72 Hrs from closed date/time</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;),
NOT( Innova_Extension_to_Closed_Date__c ))</errorConditionFormula>
    <errorMessage>You cannot edit a case that is in &apos;Closed&apos; state, after 72 Hrs from closed date/time</errorMessage>
</ValidationRule>