force-app/main/default/objects/Case/validationRules/Innova_Status_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Innova_Status_Resolved</fullName>
    <active>true</active>
    <description>Cannot set Status to &quot;Resolved&quot; without a Resolution Type.</description>
    <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;),
IF(ISPICKVAL(Status, &apos;Resolved&apos;),
OR(
   ISNULL(TEXT(wkitsm__ResolutionType__c)),
   ISBLANK(TEXT(wkitsm__ResolutionType__c))
), false),
false)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>IT Agent, fill in the Resolution Type field.</errorMessage>
</ValidationRule>