force-app/main/default/objects/Case/validationRules/Only_System_and_Admin_Can_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_System_and_Admin_Can_Close</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status , &apos;Closed&apos;) &amp;&amp;

$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>You cannot close a case directly. Please select Resolved and the Case will auto-close in 5 days.</errorMessage>
</ValidationRule>