force-app/main/default/objects/Case/validationRules/Status_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Assigned</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Incident&apos; &amp;&amp;   ISPICKVAL( Status ,&apos;Assigned&apos;) &amp;&amp; ISCHANGED( OwnerId ) = FALSE &amp;&amp;  ISCHANGED(Status) =true</errorConditionFormula>
    <errorMessage>Assigned status was not updated when it should be assigned to queue.</errorMessage>
</ValidationRule>