force-app/main/default/objects/Case/validationRules/StatusIsPendingRequiredPendingReason.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusIsPendingRequiredPendingReason</fullName>
    <active>true</active>
    <description>Required when status is set to Pending.</description>
    <errorConditionFormula>OR($RecordType.DeveloperName = &apos;Incident&apos;,$RecordType.DeveloperName =&apos;Request&apos;)&amp;&amp;
(ISPICKVAL(Status, &quot;Pending&quot;)&amp;&amp;
ISBLANK(Innova_Pending_Reason__c))</errorConditionFormula>
    <errorDisplayField>Innova_Pending_Reason__c</errorDisplayField>
    <errorMessage>Pending Reason mandatory when Status is on pending.</errorMessage>
</ValidationRule>