force-app/main/default/objects/Case/validationRules/wkitsm__Case_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__Case_Description_Required</fullName>
    <active>true</active>
    <description>Description is required for IT Service Cases.</description>
    <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, 
      $RecordType.DeveloperName = &apos;Problem&apos;, $RecordType.DeveloperName = &apos;Change&apos;), ISBLANK(Description), false)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description is required.</errorMessage>
</ValidationRule>