force-app/main/default/objects/Case/validationRules/wkitsm__Case_Subject_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__Case_Subject_Required</fullName>
    <active>false</active>
    <description>Subject is required for IT Service Cases.</description>
    <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, 
      $RecordType.DeveloperName = &apos;Problem&apos;, $RecordType.DeveloperName = &apos;Change&apos;), ISBLANK(Subject), false)</errorConditionFormula>
    <errorDisplayField>Subject</errorDisplayField>
    <errorMessage>Subject is required.</errorMessage>
</ValidationRule>