force-app/main/default/objects/Case/validationRules/wkitsm__Case_Update_Closed_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__Case_Update_Closed_Rejected</fullName>
    <active>false</active>
    <description>Validation rule to block users by updating the Closed ticket</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>You cannot edit a case that is in &apos;Closed&apos; state.</errorMessage>
</ValidationRule>