force-app/main/default/objects/Case/validationRules/wkitsm__ChangedLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__ChangedLocked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.DeveloperName = &apos;Change&apos;,
NOT(ISPICKVAL(Status, &apos;Submitted for Approval&apos;)),
ISPICKVAL(PRIORVALUE(Status), &apos;Submitted for Approval&apos;)
)</errorConditionFormula>
    <errorMessage>You cannot edit a case when it is in &apos;Submitted for Approval&apos; state.</errorMessage>
</ValidationRule>