force-app/main/default/objects/Case/validationRules/wkitsm__ChangeStatusApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__ChangeStatusApproved</fullName>
    <active>true</active>
    <description>Change case status to Approval is only allowed after Submitted for Approval</description>
    <errorConditionFormula>AND(
 $RecordType.DeveloperName = &apos;Change&apos;,
 ISPICKVAL(Status, &apos;Approved&apos;),
 NOT(ISPICKVAL(PRIORVALUE(Status), &apos;Submitted for Approval&apos;))
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>To move this Change case to &apos;Approved&apos; state, you must submit it for approval.</errorMessage>
</ValidationRule>