force-app/main/default/objects/Case/validationRules/wkitsm__ITSCStartDateNotAfterEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__ITSCStartDateNotAfterEndDate</fullName>
    <active>true</active>
    <description>Requires that the planned start date not be after the planned end date</description>
    <errorConditionFormula>AND($RecordType.DeveloperName = &apos;Change&apos;, wkitsm__PlannedStartDateTime__c &gt; wkitsm__PlannedEndDateTime__c)</errorConditionFormula>
    <errorMessage>Planned start time cannot be after planned end time.</errorMessage>
</ValidationRule>