force-app/main/default/objects/Case/validationRules/wkitsm__Status_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>wkitsm__Status_Resolved</fullName>
    <active>false</active>
    <errorConditionFormula>IF(OR($RecordType.DeveloperName = &apos;Incident&apos;, $RecordType.DeveloperName = &apos;Request&apos;, $RecordType.DeveloperName = &apos;MajorIncident&apos;),
IF(ISPICKVAL(Status, &apos;Resolved&apos;),
OR(
   ISNULL(TEXT(wkitsm__ResolutionType__c)),
   ISBLANK(TEXT(wkitsm__ResolutionType__c))
), false),
false)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Select the resolution type and details.</errorMessage>
</ValidationRule>