force-app/main/default/objects/Case/listViews/Agent_Queue.listView-meta.xml
<ListView>
    <fullName>Agent_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Innova_Due_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Innova_Category1__c</columns>
    <columns>Innova_Subcategory1__c</columns>
    <columns>Innova_Sub_Subcategory__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Queue__c</field>
        <operation>equals</operation>
        <value>Learning Management System (LMS)</value>
    </filters>
    <label>Agent Queue</label>
    <sharedTo>
        <group>Learning_Management_System_LMS</group>
    </sharedTo>
</ListView>