force-app/main/default/objects/Case/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Contact_Location__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>wkitsm__DueDate__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>OWNER_NAME</columns>
    <columns>To_Address__c</columns>
    <columns>ISC_Current_Queue__c</columns>
    <columns>ISC_Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Innova_IT_Agents</group>
    </sharedTo>
</ListView>