force-app/main/default/objects/Case/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>Current_Queue__c</columns>
    <columns>Innova_Region1__c</columns>
    <columns>Innova_Brand1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved,Rejected,Closed</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <group>Innova_IT_Agents</group>
    </sharedTo>
</ListView>