force-app/main/default/objects/Case/listViews/App_Support_Bullhorn_Open.listView-meta.xml
<ListView>
    <fullName>App_Support_Bullhorn_Open</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Pending_Status__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <columns>Innova_Category1__c</columns>
    <columns>Innova_Subcategory1__c</columns>
    <columns>Innova_Sub_Subcategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Queue__c</field>
        <operation>equals</operation>
        <value>Applications Support - Bullhorn</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved,Rejected,Closed</value>
    </filters>
    <filters>
        <field>Current_Queue__c</field>
        <operation>equals</operation>
        <value>Application Support - Bullhorn</value>
    </filters>
    <label>App Support - Bullhorn (Open)</label>
    <sharedTo>
        <group>Application_Support_Bullhorn</group>
    </sharedTo>
</ListView>