force-app/main/default/objects/Case/listViews/App_Support_Dynamics_NAV_All.listView-meta.xml
<ListView>
    <fullName>App_Support_Dynamics_NAV_All</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <columns>Innova_Category1__c</columns>
    <columns>Innova_Subcategory1__c</columns>
    <columns>Innova_Sub_Subcategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Queue__c</field>
        <operation>equals</operation>
        <value>Application Support - Dynamics Nav</value>
    </filters>
    <label>App Support - Dynamics NAV (All)</label>
    <sharedTo>
        <group>Application_Support_Dynamics_Nav</group>
    </sharedTo>
</ListView>