force-app/main/default/objects/Case/listViews/Application_Support_ClientPlaybook.listView-meta.xml
<ListView>
    <fullName>Application_Support_ClientPlaybook</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Innova_Due_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Innova_Category1__c</columns>
    <columns>Innova_Subcategory1__c</columns>
    <columns>Innova_Sub_Subcategory__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Queue__c</field>
        <operation>equals</operation>
        <value>Application Support - ClientPlaybook</value>
    </filters>
    <label>Application Support - ClientPlaybook</label>
    <sharedTo>
        <group>Application_Support_ClientPlaybook</group>
    </sharedTo>
</ListView>